Fix input group overflow

--- a/assets/sass/atoms/_input-group.scss
+++ b/assets/sass/atoms/_input-group.scss
@@ -2,6 +2,7 @@
 
 .input-group {
   position: relative;
+  overflow: hidden;
 
   &.full-width { width: 100%; }
 
